--- a/templates/upload.html
+++ b/templates/upload.html
@@ -97,7 +97,7 @@
 
             if (!token) {
                 alert("Authentication error: No token found. Please log in.");
-                window.location.href = `${BASE_URL}/login.html`;
+                window.location.href = `${BASE_URL}/login/`;
                 return;
             }
 
@@ -136,10 +136,10 @@
 
         function logout() {
             localStorage.removeItem("access_token");
-            window.location.href = `${BASE_URL}/login.html`;
+            window.location.href = `${BASE_URL}/login`;
         }
 
-        document.getElementById("gallery-link").href = `${BASE_URL}/images.html`;
+        document.getElementById("gallery-link").href = `${BASE_URL}/images`;
     </script>
 
 </body>
